# axum_cli

./: Cargo.toml  README.md
src/: constants.rs  main.rs
src/cli/: command.rs  mod.rs
src/cli/command/: init.rs  middleware.rs  new.rs  router.rs
src/cli/command/middleware/: new.rs
src/cli/command/router/: new.rs
src/run/: init.rs  mod.rs  new.rs
src/run/middleware/: new.rs
src/run/router/: new.rs
src/utils/: get_zip.rs  mod.rs  parse_zip.rs  toml.rs  write.rs  zip.rs
