[package]
name = "axum_cli"
version = "0.2.0"
edition = "2021"
authors = ["myyrakle <sssang97@naver.com>"]
description = "Axum Web Template Generator" 
keywords = ["axum", "generator"] 
license = "MIT" 
include = ["src/*", "Cargo.toml"] 
exclude = [] 
readme = "README.md" 
repository = "https://github.com/myyrakle/axum_generator" 
documentation = "https://github.com/myyrakle/axum_generator/blob/master/README.md" 
homepage = "https://github.com/myyrakle/axum_generator/blob/master/README.md" 

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
zip = "0.5"
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
clap = { version = "3.1.3", features = ["derive"] }
convert_case = "0.6.0"

[[bin]]
name = "axum"
path = "src/main.rs"
required-features = ["axum"]

[features]
default = ["axum"]
axum = ["cli"]
cli = ["atty", "structopt"]
